added some code

--- a/practice.html
+++ b/practice.html
@@ -54,11 +54,35 @@
             color: pink;
         }
 
+        /* ul{
+            color: deeppink;
+        } */
+        .player{
+            font-size: larger;
+        }
+        #aqua{
+            color: blue;
+        }
+        #blue{
+            color: blueviolet;
+        }
+        #red{
+            color: gold;
+        }
+        #bis{
+            color: rgb(242, 0, 255);
+        }
+        #rgb{
+            color: red;
+        }
+
 
     </style>
 </head>
 <body style="background-color: rgb(0, 229, 255);">
     <h1 id="majh" >Welcome to My CSS Website</h1>
+    <br>
+    <h2 style="color: deepskyblue; background-color: rgb(39, 128, 32); padding: 10px;width: 25%;">Introduction to CSS and CSS types</h2>
     <div class="check">
         <h2>Types of CSS :</h3>
             <ol>
@@ -86,11 +110,11 @@
     <div class="blog">
         <h2>CSS SELECTORS</h2>
         <ul>
-            <li>Class Selector</li>
-            <li>Id Selector</li>
-            <li>Element Selector</li>
-            <li>Universal Selector</li>
-            <li>Grouping Selector & Attribute Selector</li>
+            <li class="player", id="aqua">Class Selector</li>
+            <li class="player", id="blue">Id Selector</li>
+            <li class="player", id="red">Element Selector</li>
+            <li class="player", id="bis">Universal Selector</li>
+            <li class="player", id="rgb">Grouping Selector & Attribute Selector</li>
         </ul>
         <br>
     </div>
